src/objects/Candidate__c.object
<CustomObject>
    <description>Candidate Stages Tracking</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidate</relationshipLabel>
        <relationshipName>Facility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(NOW() -  CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Candidate_Product__c.LineItemPrice__c</summarizedField>
        <summaryForeignKey>Candidate_Product__c.Candidate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <inlineHelpText>Insurance Verification Case Id</inlineHelpText>
        <label>Case Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Info__c</fullName>
        <formula>Case_Id__c  &amp; TEXT(Other_Authorization_Options__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_to_Proceed_for_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to Proceed for Education?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EducationCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EducationCompleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_DateTime__c</fullName>
        <label>Education DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Education_Duration__c</fullName>
        <formula>Verify_Insurance_Start_Date__c   -  Education_Stage_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_Stage_Start_Date__c</fullName>
        <label>Education Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Entity_Name__c</fullName>
        <label>External Entity Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Id__c</fullName>
        <label>External System Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Name__c</fullName>
        <label>External System Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Duration__c</fullName>
        <formula>Education_Stage_Start_Date__c  -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify-Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Reason__c</fullName>
        <label>Opt-Out Reason</label>
        <picklist>
            <controllingField>Stage_Name__c</controllingField>
            <picklistValues>
                <fullName>No Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Opted-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost against competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fear of surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a good candidate suitable for procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance denied procedure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Authorization_Options__c</fullName>
        <label>Other Authorization Options</label>
        <picklist>
            <picklistValues>
                <fullName>Auth by PTA complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient does not require Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Insurance denied Appeals in process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician/Facility performs Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Covered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure Covered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCount__c</fullName>
        <label>ProductCount</label>
        <summaryForeignKey>Candidate_Product__c.Candidate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate</relationshipLabel>
        <relationshipName>Referred_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred To</relationshipLabel>
        <relationshipName>ReferredTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Duration__c</fullName>
        <formula>Scheduled_Start_Date__c  -  Verify_Insurance_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled - Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <label>Scheduled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Referred by patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by Patient Advocacy group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage1_Implant_Date__c</fullName>
        <label>Stage1 Implant DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage1_Implant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage1 Implant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage1_Implanted_Duration__c</fullName>
        <formula>Stage_Stage2_Implant_Start_Date__c  -  Stage_Stage1_Implant_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage1-Implanted Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage2_Implant_Date__c</fullName>
        <label>Stage2 Implant DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage2_Implant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage2-Implant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <picklist>
            <picklistValues>
                <fullName>Identify</fullName>
                <color>#33FF33</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verify Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implanted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Stage1_Implant_Start_Date__c</fullName>
        <label>Stage - Stage1 Implant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Stage2_Implant_Start_Date__c</fullName>
        <label>Stage - Stage2 Implant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verify_Insurance_Duration__c</fullName>
        <formula>Scheduled_Start_Date__c  -  Verify_Insurance_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verify Insurance Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_Insurance_Start_Date__c</fullName>
        <label>Verify Insurance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verify_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify Insurance?</label>
        <type>Checkbox</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Referred_To__c</columns>
        <columns>Referred_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <recordTypes>
        <fullName>DBS_Candidate</fullName>
        <active>true</active>
        <description>Track Candidate profile for Movement Disorder Therapies specifically targeted for DBS Product Launch in US.</description>
        <label>DBS Candidate</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Identify_Education</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED(Stage_Name__c) , ISPICKVAL( Stage_Name__c , &quot;Education&quot;) , NOT( ISPICKVAL( PRIORVALUE(Stage_Name__c) , &quot;Identify&quot;) ), $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>Stage_Name__c</errorDisplayField>
        <errorMessage>Stage can be moved to &apos;Education&apos; only from &apos;Identify&apos; Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Candidate_Stage_Identify</fullName>
        <active>false</active>
        <description>New Candidate must have a stage - Idenify</description>
        <errorConditionFormula>AND( ISNEW() , NOT( ISPICKVAL( Stage_Name__c , &quot;Identify&quot;)))</errorConditionFormula>
        <errorDisplayField>Stage_Name__c</errorDisplayField>
        <errorMessage>Stage Name must be &apos;Identify&apos; for a new Candidate record creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Update_Completed_Opt_Out</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( PRIORVALUE(Stage_Name__c) , &quot;Completed&quot;)</errorConditionFormula>
        <errorMessage>The Candidate Record can not be updated. Please clone the Record to start tracking the Candidate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opt_Out_Reason_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Stage_Name__c, &quot;Opt-Out&quot;), ISBLANK(TEXT( Opt_Out_Reason__c)))</errorConditionFormula>
        <errorDisplayField>Opt_Out_Reason__c</errorDisplayField>
        <errorMessage>Please select the Reason for Opt-Out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductValidation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Stage_Name__c , &quot;Scheduled&quot;), ProductCount__c  = 0)</errorConditionFormula>
        <errorMessage>At least One product must be entered prior to Scheduling the candidate for procedure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scheduled_Date_Verification</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Stage_Name__c, &quot;Scheduled&quot;),

OR(
ISNULL(Schedule_Date__c)
,

ISBLANK(Procedure_Covered_By__c),

ISBLANK(Account__c) 
)

)</errorConditionFormula>
        <errorMessage>Please fill in following - Scheduled Date, Procedure Covered By and Account Info prior to moving the Stage to &apos;Scheduled&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Move_Education_Verify_Insurance</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED(Stage_Name__c),ISPICKVAL( Stage_Name__c , &quot;Verify Insurance&quot;) , NOT( ISPICKVAL( PRIORVALUE(Stage_Name__c) , &quot;Education&quot;) ), $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>Stage_Name__c</errorDisplayField>
        <errorMessage>Stage can be moved to &apos;Verify Insurance&apos; only from &apos;Education&apos; Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Stage_Move_Identify</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( Stage_Name__c , &quot;Identify&quot;) , NOT( ISPICKVAL( PRIORVALUE(Stage_Name__c) , &quot;Identify&quot;) ))</errorConditionFormula>
        <errorDisplayField>Stage_Name__c</errorDisplayField>
        <errorMessage>Stage Can not be moved to Identify.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Insurance_Scheduled</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED(Stage_Name__c),ISPICKVAL( Stage_Name__c , &quot;Scheduled&quot;) , NOT( ISPICKVAL( PRIORVALUE(Stage_Name__c) , &quot;Verify Insurance&quot;) ), $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>Stage_Name__c</errorDisplayField>
        <errorMessage>Stage can be moved to &quot;Scheduled&quot; only from &quot;Verify Insurance&quot; Stage.</errorMessage>
    </validationRules>
</CustomObject>